log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: data-claim
        - name: config
          configMap:
            name: log-output-configmap
            items:
              - key: "information.txt"
                path: "information.txt"
      containers:
        - name: log-output
          image: turtvaiz/log-output:2.5
          volumeMounts:
            - name: shared-data
              mountPath: /app/files
            - name: config
              mountPath: "/app/config"
              readOnly: true
        - name: log-output-timer
          image: turtvaiz/log-output-timer:2.5
          volumeMounts:
            - name: shared-data
              mountPath: /app/files
